--- a/GeriatricHelper/CGAPublic.storyboard
+++ b/GeriatricHelper/CGAPublic.storyboard
@@ -55,7 +55,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="84" id="ZVF-17-F1V" customClass="ScaleCard" customModule="GeriatricHelper" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="84" id="ZVF-17-F1V">
                                 <rect key="frame" x="0.0" y="28" width="375" height="84"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZVF-17-F1V" id="RiA-jc-UoD">
@@ -119,35 +119,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ojW-Sr-fBM">
-                                <rect key="frame" x="24" y="28" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ojW-Sr-fBM">
+                                <rect key="frame" x="24" y="28" width="71" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g2c-gd-kVF">
-                                <rect key="frame" x="24" y="57" width="343" height="602"/>
+                                <rect key="frame" x="16" y="86" width="343" height="573"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Description" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b3u-uP-KB5">
+                                <rect key="frame" x="24" y="57" width="163" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ojW-Sr-fBM" firstAttribute="leading" secondItem="LFi-mO-kIh" secondAttribute="leadingMargin" constant="8" id="14F-Bu-3CD"/>
-                            <constraint firstItem="g2c-gd-kVF" firstAttribute="leading" secondItem="LFi-mO-kIh" secondAttribute="leadingMargin" constant="8" id="1ua-Ry-Yok"/>
                             <constraint firstItem="kBZ-AY-eIo" firstAttribute="top" secondItem="g2c-gd-kVF" secondAttribute="bottom" constant="8" id="4oi-V1-joa"/>
-                            <constraint firstItem="g2c-gd-kVF" firstAttribute="top" secondItem="ojW-Sr-fBM" secondAttribute="bottom" constant="8" id="E8H-yp-nca"/>
-                            <constraint firstItem="g2c-gd-kVF" firstAttribute="trailing" secondItem="LFi-mO-kIh" secondAttribute="trailingMargin" constant="8" id="Nvh-xR-ij5"/>
+                            <constraint firstItem="b3u-uP-KB5" firstAttribute="top" secondItem="ojW-Sr-fBM" secondAttribute="bottom" constant="8" symbolic="YES" id="7cA-WB-ktp"/>
+                            <constraint firstItem="kBZ-AY-eIo" firstAttribute="top" secondItem="g2c-gd-kVF" secondAttribute="bottom" constant="8" id="PHg-Id-hp0"/>
+                            <constraint firstItem="b3u-uP-KB5" firstAttribute="leading" secondItem="LFi-mO-kIh" secondAttribute="leadingMargin" constant="8" id="S2a-a0-pAG"/>
                             <constraint firstItem="ojW-Sr-fBM" firstAttribute="top" secondItem="248-O2-Wfa" secondAttribute="bottom" constant="8" id="doz-Pn-UpA"/>
+                            <constraint firstItem="b3u-uP-KB5" firstAttribute="leading" secondItem="ojW-Sr-fBM" secondAttribute="leading" id="im2-Bi-kHv"/>
+                            <constraint firstItem="g2c-gd-kVF" firstAttribute="leading" secondItem="LFi-mO-kIh" secondAttribute="leadingMargin" id="jRj-uZ-8qG"/>
+                            <constraint firstItem="g2c-gd-kVF" firstAttribute="top" secondItem="b3u-uP-KB5" secondAttribute="bottom" constant="8" id="mgv-9e-GJq"/>
+                            <constraint firstItem="g2c-gd-kVF" firstAttribute="centerX" secondItem="LFi-mO-kIh" secondAttribute="centerX" id="pT0-6j-Axc"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="categoryDescription" destination="b3u-uP-KB5" id="aVv-jg-ntc"/>
                         <outlet property="categoryName" destination="ojW-Sr-fBM" id="a9B-pC-E86"/>
                         <outlet property="table" destination="g2c-gd-kVF" id="HIT-64-N7F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OdI-vz-dlY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1194" y="-1403"/>
+            <point key="canvasLocation" x="1192.8" y="-1403.7481259370315"/>
         </scene>
         <!--SessionSingleQuestionChoices-->
         <scene sceneID="YOD-HF-9SN">
@@ -421,46 +432,7 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x8P-1R-UXj" id="fiL-dm-FeJ">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdc-1z-WEj">
-                                            <rect key="frame" x="16" y="19" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeA-M0-F1p">
-                                            <rect key="frame" x="275" y="15" width="46" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="46" id="I1V-Q2-vSA"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
-                                            <state key="normal" title="Yes"/>
-                                            <connections>
-                                                <action selector="yesButtonClicked:" destination="x8P-1R-UXj" eventType="touchUpInside" id="tUp-lq-jUm"/>
-                                            </connections>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bA1-Vc-mMY">
-                                            <rect key="frame" x="337" y="15" width="30" height="30"/>
-                                            <state key="normal" title="No"/>
-                                            <connections>
-                                                <action selector="noButtonClicked:" destination="x8P-1R-UXj" eventType="touchUpInside" id="7kN-k0-GYU"/>
-                                            </connections>
-                                        </button>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="Bdc-1z-WEj" firstAttribute="centerY" secondItem="fiL-dm-FeJ" secondAttribute="centerY" id="O6a-FF-TFC"/>
-                                        <constraint firstItem="bA1-Vc-mMY" firstAttribute="centerY" secondItem="fiL-dm-FeJ" secondAttribute="centerY" id="QOa-ge-1fF"/>
-                                        <constraint firstItem="eeA-M0-F1p" firstAttribute="baseline" secondItem="Bdc-1z-WEj" secondAttribute="baseline" id="UGh-go-wQs"/>
-                                        <constraint firstItem="Bdc-1z-WEj" firstAttribute="leading" secondItem="fiL-dm-FeJ" secondAttribute="leadingMargin" constant="8" id="YDY-NX-PmK"/>
-                                        <constraint firstItem="bA1-Vc-mMY" firstAttribute="leading" secondItem="eeA-M0-F1p" secondAttribute="trailing" constant="16" id="v9m-N2-AKz"/>
-                                        <constraint firstItem="bA1-Vc-mMY" firstAttribute="trailing" secondItem="fiL-dm-FeJ" secondAttribute="trailingMargin" id="zgA-60-fnI"/>
-                                    </constraints>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="noButton" destination="bA1-Vc-mMY" id="NzX-a0-Frx"/>
-                                    <outlet property="questionLabel" destination="Bdc-1z-WEj" id="GQH-g7-Skp"/>
-                                    <outlet property="yesButton" destination="eeA-M0-F1p" id="JKh-us-RIS"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
