--- a/GeriatricHelper/YesNoQuestionTableViewCell.xib
+++ b/GeriatricHelper/YesNoQuestionTableViewCell.xib
@@ -12,26 +12,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="YesNoQuestionTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="46" id="KGk-i7-Jjw" customClass="YesNoQuestionTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="45.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7D-Eg-d2N">
-                        <rect key="frame" x="16" y="11" width="42" height="21"/>
+                        <rect key="frame" x="16" y="12.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aXV-gj-SVN">
-                        <rect key="frame" x="266" y="6" width="46" height="30"/>
-                        <state key="normal" title="Button"/>
+                        <rect key="frame" x="282" y="8" width="30" height="30"/>
+                        <state key="normal" title="No"/>
+                        <connections>
+                            <action selector="noButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="rdD-3Z-3vH"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mff-YD-CG7">
-                        <rect key="frame" x="212" y="6" width="46" height="30"/>
-                        <state key="normal" title="Button"/>
+                        <rect key="frame" x="244" y="8" width="30" height="30"/>
+                        <state key="normal" title="Yes"/>
+                        <connections>
+                            <action selector="yesButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="PBy-qV-Fzg"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
@@ -44,11 +50,11 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="noButton" destination="aXV-gj-SVN" id="ww8-lb-e0Y"/>
+                <outlet property="noButton" destination="aXV-gj-SVN" id="ux9-v3-WnJ"/>
                 <outlet property="question" destination="X7D-Eg-d2N" id="gf9-h9-2nc"/>
-                <outlet property="yesButton" destination="Mff-YD-CG7" id="jYg-hg-Hbq"/>
+                <outlet property="yesButton" destination="Mff-YD-CG7" id="2yh-lT-HB2"/>
             </connections>
-            <point key="canvasLocation" x="-109" y="54"/>
+            <point key="canvasLocation" x="-419" y="-81"/>
         </tableViewCell>
     </objects>
 </document>
